# packaging_tutorial

./: README.md  pyproject.toml  setup.cfg
src/example_package/: __init__.py
src/example_package_sparks_baird/: example.py
