[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example_package_sparks_baird"
authors = [{name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/sparks-baird/packaging_tutorial/"
